Bug 247700 - kpresenter:msoffice 2000:Autoshape "connectors " are not displayed.
Summary: kpresenter:msoffice 2000:Autoshape "connectors " are not displayed.
Status: VERIFIED FIXED
Alias: None
Product: calligracommon
Classification: Applications
Component: filters (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries All
: NOR major
Target Milestone: ---
Assignee: KOffice Bug Wranglers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-18 08:09 UTC by Lassi Nieminen
Modified: 2011-04-27 10:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test document to be tested in MS Powerpoint 2000 and Kpresenter. (8.50 KB, application/vnd.ms-powerpoint)
2009-09-18 08:09 UTC, Lassi Nieminen
Details
Screenshot when viewed in Kpresenter. (47.63 KB, image/pjpeg)
2009-09-18 08:10 UTC, Lassi Nieminen
Details
Screenshot when viewed in MS powerpoint 2000. (14.46 KB, image/pjpeg)
2009-09-18 08:12 UTC, Lassi Nieminen
Details
Screenshot of the issue when viewed in Kpresenter. (126.50 KB, image/pjpeg)
2010-01-20 09:53 UTC, Lassi Nieminen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Faure 2010-08-13 20:35:38 UTC


---- Reported by lassi.ta.nieminen@nokia.com 2009-09-18 09:09:54 +0300 ----

Created an attachment
Test document to be tested in MS Powerpoint 2000 and Kpresenter.

SOFTWARE VERSION:
Kubuntu version 9.04
KOffice Version 1021093
Test Document(MS Office 2000): mp00_autoshapes_connectors.ppt

STEPS LEADING TO PROBLEM: 

1.Open the PPT in MS Powerpoint 2000.
2.Open the same document in KPresenter.
3.Observe the first slide.


EXPECTED OUTCOME:
The autoshape connectors should be displayed.See
attachment(mp00_autoshapes_connectors.jpeg)

ACTUAL OUTCOME:
The autoshape connectors is not displayed.See attachment(kp_autoshapes_connectors.jpeg)

FREQUENCY OF OCCURRENCE: 
Always



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-09-18 09:10:31 +0300 ----

Created an attachment
Screenshot when viewed in Kpresenter.



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-09-18 09:12:01 +0300 ----

Created an attachment
Screenshot when viewed in MS powerpoint 2000.



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-12-04 10:35:18 +0200 ----

Reassigning bugs from noname to noname



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-01-11 06:51:21 +0200 ----

Assigning



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-01-20 10:53:53 +0200 ----

Created an attachment
Screenshot of the issue when viewed in Kpresenter.



--- Bug imported by faure@kde.org 2010-08-13 20:35  ---

This bug was previously known as _bug_ 139582.

Imported an attachment (id=50214)
Imported an attachment (id=50215)
Imported an attachment (id=50216)
Imported an attachment (id=50217)

Bug Status was ASSIGNED but everconfirmed was false
   Setting status to UNCONFIRMED

Comment 1 LukasT 2011-03-18 15:37:03 UTC
Git commit d348e326a492852e731fd5be8285c853aa245ee4 by Lukáš Tvrdý.
Committed on 18/03/2011 at 15:30.
Pushed by lukast into branch 'master'.

Add support for the missing shapes: straight and bent connector

BUG:247700

M  +8    -1    filters/libmso/ODrawToOdf.h     
M  +142  -0    filters/libmso/shapes.cpp     

http://commits.kde.org/calligra/d348e326a492852e731fd5be8285c853aa245ee4
Comment 2 swathi 2011-04-27 10:18:12 UTC
Verified in text-layoutrestructure-boemann  branch.