Add support for the missing shapes: straight and bent connector

BUG:247700