filters/libmso/ODrawToOdf.h
@@ -25,6 +25,7 @@
 
 class DrawStyle;
 class QColor;
+class QPainterPath;
 
 class ODrawToOdf
 {
@@ -120,6 +121,8 @@ private:
     void processOctagon(const MSO::OfficeArtSpContainer& o, Writer& out);
     void processArrow(const MSO::OfficeArtSpContainer& o, Writer& out);
     void processLine(const MSO::OfficeArtSpContainer& o, Writer& out);
+    void processStraightConnector1(const MSO::OfficeArtSpContainer& o, Writer& out);
+    void processBentConnector3(const MSO::OfficeArtSpContainer& o, Writer& out);
     void processSmiley(const MSO::OfficeArtSpContainer& o, Writer& out);
     void processHeart(const MSO::OfficeArtSpContainer& o, Writer& out);
     void processQuadArrow(const MSO::OfficeArtSpContainer& o, Writer& out);
@@ -159,7 +162,7 @@ private:
     */
     void set2dGeometry(const MSO::OfficeArtSpContainer& o, Writer& out);
     void setEnhancedGeometry(const MSO::OfficeArtSpContainer& o, Writer& out);
-
+    QString path2svg(const QPainterPath &path);
 public:
     ODrawToOdf(Client& c) :client(&c) {}
     void processGroupShape(const MSO::OfficeArtSpgrContainer& o, Writer& out);
@@ -178,6 +181,8 @@ public:
      * @return final color
      */
     QColor processOfficeArtCOLORREF(const MSO::OfficeArtCOLORREF& c, const DrawStyle& ds);
+
+
 };
 
 /**
@@ -190,5 +195,7 @@ inline qreal toQReal(const MSO::FixedPoint& f)
 const char* getFillType(quint32 fillType);
 const char* getRepeatStyle(quint32 fillType);
 const char* getGradientRendering(quint32 fillType);
+
+
 
 #endif
