filters/libmso/shapes.cpp
@@ -1,5 +1,6 @@
 /* This file is part of the KDE project
    Copyright (C) 2010 KO GmbH <jos.van.den.oever@kogmbh.com>
+   Copyright (C) 2011 Lukáš Tvrdý <lukas.tvrdy@ixonos.com>
 
    This library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Library General Public
@@ -27,6 +28,7 @@
 #include <qbuffer.h>
 
 #include <cmath>
+
 
 using namespace MSO;
 
@@ -595,6 +597,118 @@ void ODrawToOdf::processLine(const OfficeArtSpContainer& o, Writer& out)
 
     out.xml.endElement();
 }
+
+void ODrawToOdf::processStraightConnector1(const OfficeArtSpContainer& o, Writer& out)
+{
+    const QRectF rect = getRect(o);
+    qreal x1 = rect.x();
+    qreal y1 = rect.y();
+    qreal x2 = rect.x() + rect.width();
+    qreal y2 = rect.y() + rect.height();
+
+    if (o.shapeProp.fFlipV) {
+        qSwap(y1, y2);
+    }
+    if (o.shapeProp.fFlipH) {
+        qSwap(x1, x2);
+    }
+
+    out.xml.startElement("draw:connector");
+    out.xml.addAttribute("svg:x1", client->formatPos(out.hOffset(x1)));
+    out.xml.addAttribute("svg:y1", client->formatPos(out.vOffset(y1)));
+    out.xml.addAttribute("svg:x2", client->formatPos(out.hOffset(x2)));
+    out.xml.addAttribute("svg:y2", client->formatPos(out.vOffset(y2)));
+    addGraphicStyleToDrawElement(out, o);
+    out.xml.addAttribute("draw:layer", "layout");
+    out.xml.addAttribute("draw:type", "line");
+    processText(o, out);
+    out.xml.endElement();
+
+}
+
+void ODrawToOdf::processBentConnector3(const OfficeArtSpContainer& o, Writer& out)
+{
+    const OfficeArtDggContainer * drawingGroup = 0;
+    if (client) {
+        drawingGroup = client->getOfficeArtDggContainer();
+    }
+
+    const OfficeArtSpContainer* master = 0;
+    const DrawStyle ds(drawingGroup, master, &o);
+    qreal rotation = toQReal( ds.rotation() );
+
+    const QRectF rect = getRect(o);
+    qreal x1 = rect.x();
+    qreal y1 = rect.y();
+    qreal x2 = rect.x() + rect.width();
+    qreal y2 = rect.y() + rect.height();
+
+    QRectF shapeRect = rect;
+
+    qreal sx1 = x1;
+    qreal sy1 = y1;
+    qreal sx2 = x2;
+    qreal sy2 = y2;
+
+    if (rotation != 0.0) {
+        QTransform m;
+        m.rotate( -rotation );
+        shapeRect = m.mapRect(rect.translated(-rect.center())).translated(rect.center());
+
+        sx1 = shapeRect.topLeft().x();
+        sy1 = shapeRect.topLeft().y();
+        sx2 = shapeRect.bottomRight().x();
+        sy2 = shapeRect.bottomRight().y();
+    }
+
+    // compute path
+    QPainterPath shapePath;
+    shapePath.moveTo(sx1,sy1);
+    shapePath.lineTo((sx1 + sx2)/2.0, sy1);
+    shapePath.lineTo((sx1 + sx2)/2.0, sy2);
+    shapePath.lineTo(sx2,sy2);
+
+    // transform the path according the shape properties like flip and rotation
+    QTransform m;
+    m.reset();
+    m.translate( -shapeRect.center().x(), -shapeRect.center().y() );
+
+    if (o.shapeProp.fFlipH){
+        m.scale(-1,1);
+    }
+
+    if (o.shapeProp.fFlipV){
+        m.scale(1,-1);
+    }
+
+    if (rotation != 0) {
+        m.rotate(rotation);
+    }
+
+    m.translate( shapeRect.center().x(), shapeRect.center().y() );
+    shapePath = m.map(shapePath);
+
+    // translate the QPainterPath into svg:d attribute
+    QString path = path2svg(shapePath);
+
+    out.xml.startElement("draw:connector");
+    addGraphicStyleToDrawElement(out, o);
+    out.xml.addAttribute("draw:layer", "layout");
+    out.xml.addAttribute("svg:x1", client->formatPos(out.hOffset(x1)));
+    out.xml.addAttribute("svg:y1", client->formatPos(out.vOffset(y1)));
+    out.xml.addAttribute("svg:x2", client->formatPos(out.hOffset(x2)));
+    out.xml.addAttribute("svg:y2", client->formatPos(out.vOffset(y2)));
+    if (!path.isEmpty()) {
+        out.xml.addAttribute("svg:d", path);
+    }
+
+    processText(o, out);
+    out.xml.endElement();
+
+}
+
+
+
 
 void ODrawToOdf::processSmiley(const OfficeArtSpContainer& o, Writer& out)
 {
@@ -1585,6 +1699,10 @@ void ODrawToOdf::processDrawingObject(const OfficeArtSpContainer& o, Writer& out
         processArrow(o, out);
     } else if (shapeType == msosptLine) {
         processLine(o, out);
+    } else if (shapeType == msosptStraightConnector1) {
+        processStraightConnector1(o, out);
+    } else if (shapeType == msosptBentConnector3) {
+        processBentConnector3(o, out);
     } else if (shapeType == msosptWedgeRectCallout) {
         processWedgeRectCallout(o, out);
     } else if (shapeType == msosptWedgeEllipseCallout) {
@@ -1930,3 +2048,27 @@ void ODrawToOdf::setEnhancedGeometry(const MSO::OfficeArtSpContainer& o, Writer&
     }
 }
 
+QString ODrawToOdf::path2svg(const QPainterPath &path) {
+    QString d;
+
+    int count = path.elementCount();
+    for (int i = 0; i < count; i++) {
+
+        QPainterPath::Element e = path.elementAt(i);
+        switch(e.type){
+            case QPainterPath::MoveToElement:{
+                d.append(QString("M %1 %2").arg(e.x).arg(e.y));
+                break;
+            }
+            case QPainterPath::LineToElement:{
+                d.append(QString("L %1 %2").arg(e.x).arg(e.y));
+                break;
+            }
+            default:{
+                //TODO CurveToElement, CurveToElementDataElement
+                qDebug() << "This element unhandled";
+            }
+        }
+    }
+    return d;
+}
